brat/test/golden/kernel/delete.brat.golden
Error in test/golden/kernel/delete.brat@FC {start = Pos {line = 2, col = 13}, end = Pos {line = 2, col = 29}}:
deleteFst = { q0, q1 => q1 }
            ^^^^^^^^^^^^^^^^

  Type error: Variable(s) q0 haven't been used

